Fixed up shifting inputs on event edit

--- a/src/assets/scss/_button.scss
+++ b/src/assets/scss/_button.scss
@@ -368,7 +368,7 @@ button.button.is-small:active {
 
 .buttons .button,
 .form .buttons .button {
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 0.5rem;
 
   @media screen and (max-width: $widescreen) {
     font-size: 1rem;
